# MyWebServer

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/config/: global_config.hpp
include/http/: http_conn.hpp  http_response_templates.hpp
include/logger/: logger.hpp
include/pool/: thread_pool.hpp
include/server/: web_server.hpp  windows_poller.hpp
include/utils/: resource_utils.hpp
resources/html/: 400.html  403.html  404.html  500.html
src/: CMakeLists.txt  main.cpp
src/config/: global_config.cpp
src/http/: http_conn.cpp
src/logger/: logger.cpp
src/pool/: thread_pool.cpp
src/server/: web_server.cpp
src/utils/: resource_utils.cpp
tests/: http_conn_test.cpp  thread_pool_test.cpp
tools/: format_all.sh
